--- a/website/index.html
+++ b/website/index.html
@@ -3,111 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our House • Location</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <title>Bhuvaneshwari Illam — A Home Built with Love</title>
+    <meta name="theme-color" content="#0a0908" />
+    <meta name="description" content="House warming ceremony invitation — Bhuvaneshwari Illam, Kadampadi, Sulur." />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;0,700;1,400&family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <main class="page">
-      <div class="shell">
-        <header class="top">
-          <p class="kicker">House Location</p>
-          <h1 class="title">Come visit our new home</h1>
-          <p class="subtitle">
-            Tap <b>Open in Maps</b> for directions. Tap <b>We will show</b> to open a popup with videos.
-          </p>
-        </header>
-
-        <section class="grid" aria-label="Location and details">
-          <article class="card" aria-label="Map and address">
-            <div class="card__body">
-              <div style="display:flex; gap:10px; flex-wrap:wrap; align-items:center; justify-content:space-between;">
-                <h2 class="sectionTitle" style="margin:0;">Address</h2>
-                <span id="statusPill" class="pill" hidden>Copied</span>
-              </div>
-
-              <pre id="address" class="address" style="white-space: pre-wrap; font-family: inherit;"></pre>
-              <p class="tiny">
-                If the embedded map doesn’t load on your device, use the maps button below.
-              </p>
-
-              <div class="actions">
-                <a id="openMaps" class="btn btn--primary" href="#" target="_blank" rel="noreferrer">
-                  Open in Maps
-                </a>
-                <button id="copyAddress" class="btn" type="button">Copy Address</button>
-                <button id="openVideos" class="btn" type="button">We will show (videos)</button>
-              </div>
-            </div>
-
-            <iframe
-              id="mapFrame"
-              class="mapFrame"
-              title="Map"
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-
-            <div id="mapFallback" class="mapFallback">
-              Map preview blocked on this browser. Use <b>Open in Maps</b> above.
-            </div>
-          </article>
-
-          <aside class="sideCard">
-            <article class="card" aria-label="What to expect">
-              <div class="card__body">
-                <h2 class="sectionTitle">What to expect</h2>
-                <ul class="list">
-                  <li class="listItem">
-                    <b>Directions</b>
-                    <span>Open maps, follow the route, and call if needed.</span>
-                  </li>
-                  <li class="listItem">
-                    <b>Videos popup</b>
-                    <span>Next/Prev buttons + Arrow keys. ESC to close.</span>
-                  </li>
-                  <li class="listItem">
-                    <b>Easy updates</b>
-                    <span>Edit address + video links in <code>website/script.js</code>.</span>
-                  </li>
-                </ul>
-              </div>
-            </article>
-          </aside>
-        </section>
-      </div>
-    </main>
-
-    <!-- Video popup -->
-    <div id="modalRoot" class="modalRoot" data-open="false" aria-hidden="true">
-      <div id="modalOverlay" class="modalOverlay"></div>
-      <section
-        id="modalDialog"
-        class="modal"
-        role="dialog"
-        aria-modal="true"
-        aria-label="Videos"
-      >
-        <header class="modalHeader">
-          <h3 id="modalTitle" class="modalTitle">Videos</h3>
-          <div class="spacer"></div>
-          <button id="closeModal" class="iconBtn btn--danger" type="button" aria-label="Close">
-            Close
-          </button>
-        </header>
-
-        <div class="modalBody">
-          <div id="player" class="player" aria-label="Video player"></div>
-        </div>
-
-        <footer class="modalFooter">
-          <button id="prevVideo" class="btn" type="button">Prev</button>
-          <button id="nextVideo" class="btn btn--primary" type="button">Next</button>
-          <span id="counter" class="counter">0 / 0</span>
-          <span class="hint">Tip: ← → keys • ESC to close</span>
-        </footer>
-      </section>
-    </div>
-
-    <script src="./script.js"></script>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
