--- a/website/index.html
+++ b/website/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bhuvaneshwari Illam — A Home Built with Love</title>
+    <meta name="description" content="We warmly invite you to join us at Bhuvaneshwari Illam, Kadampadi, Sulur, as we celebrate our new home. A home built with love, faith, and new beginnings." />
     <meta name="theme-color" content="#0a0908" />
-    <meta name="description" content="House warming ceremony invitation — Bhuvaneshwari Illam, Kadampadi, Sulur." />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
+
+    <!-- Open Graph (Facebook, WhatsApp, Instagram, LinkedIn) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Bhuvaneshwari Illam — A Home Built with Love" />
+    <meta property="og:description" content="We warmly invite you to join us at Bhuvaneshwari Illam, Kadampadi, Sulur, as we celebrate our new home. OM PACHAI AMMAN THUNAI !!" />
+    <meta property="og:image" content="/assets/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Bhuvaneshwari Illam — House warming invitation" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Bhuvaneshwari Illam — A Home Built with Love" />
+    <meta name="twitter:description" content="We warmly invite you to join us at Bhuvaneshwari Illam, Kadampadi, Sulur, as we celebrate our new home." />
+    <meta name="twitter:image" content="/assets/og-image.jpg" />
+    <meta name="twitter:image:alt" content="Bhuvaneshwari Illam — House warming invitation" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;0,700;1,400&family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
